IM-added text wrap to avoid truncate text, in work move label to right because label is too wide

--- a/src/components/work/TypeaheadSearchItem.module.css
+++ b/src/components/work/TypeaheadSearchItem.module.css
@@ -3,9 +3,6 @@
   /* margin-bottom: 1rem; */
 }
 
-.imageWrapper {
-  position: relative;
-}
 .imageWrapper span {
   background-color: rgb(193, 198, 210);
   border-radius: 1rem;
